Nav background, z-index fixed

--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -7,7 +7,12 @@ body {
     font-weight: 500;
 }
 
+.navbar:hover {
+    font-weight: 500;
+}
+
 #navbar {
+    background-color: orange;
 
     z-index: 1;
   
@@ -23,7 +28,6 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     min-height: 600px;
-    z-index: -1;
     text-align: center;
 }
 
